# Homework-Web-06

./: main.py  pyproject.toml  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql
