[tool.poetry]
name = "homework-web-06"
version = "0.1.0"
description = ""
authors = ["oleksandr-study <140350329+oleksandr-study@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^24.2.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
